--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "zkwasm-rlp"
+name = "mimc"
 version = "0.1.0"
 edition = "2021"
 
@@ -9,5 +9,5 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-rlp = { version = "0.5.2", default-features = false }
+num-bigint = "0.4.4"
 wasm-bindgen = "0.2.83"
